# IMOT_OpticalFlow_Edges

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dataset/rene/: input.txt
dataset/rouen/: input.txt
dataset/sherbrooke/: input.txt
dataset/stmarc/: input.txt
of_dis/: run_dense.cpp
src/: main.cpp
src/detection/: Detector.cpp  Detector.h
src/edge_processing/: EdgeProcessor.cpp  EdgeProcessor.h
src/flow_processing/: FlowProcessor.cpp  FlowProcessor.h
src/frame_processing/: FrameProcessor.cpp  FrameProcessor.h
src/support/: Argument.cpp  Argument.h  FileOperations.cpp  FileOperations.h  Line.cpp  Line.h  Place.cpp  Place.h
